--- a/package.json
+++ b/package.json
@@ -5,19 +5,33 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "npx serve@latest out", 
+    "start": "npx serve@latest out",
     "lint": "next lint"
   },
   "dependencies": {
+    "@google-cloud/vision": "^4.3.2",
     "@tippyjs/react": "^4.2.6",
+    "@uiw/react-heat-map": "^2.3.2",
     "autoprefixer": "^10.4.20",
+    "axiom": "^0.1.6",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.3",
+    "echarts-gl": "^2.0.9",
     "emailjs-com": "^3.2.0",
+    "framer-motion": "^12.4.1",
     "next": "15.1.6",
+    "openai": "^4.83.0",
+    "plotly.js": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.4.0",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "react-plotly.js": "^2.6.0",
     "recharts": "^2.15.1",
-    "styled-components": "^6.1.15"
+    "socket.io-client": "^4.8.1",
+    "styled-components": "^6.1.15",
+    "swr": "^2.3.2",
+    "toast": "^0.5.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
